@@ -2,7 +2,6 @@
 ../archtable usr/share/dpkg
 
 etc/alternatives
-etc/dpkg/origins
 usr/bin/dpkg
 usr/bin/dpkg-deb
 usr/bin/dpkg-divert
