@@ -1,4 +1,3 @@
 dpkg: redundant-origin-field
 dpkg: redundant-bugs-field
 dpkg: arch-dep-package-has-big-usr-share
-dpkg: package-contains-empty-directory usr/share/dpkg/origins/
