@@ -1,10 +1,0 @@
-## Process this file with automake to produce Makefile.in
-
-pkgconfdir = $(sysconfdir)/@PACKAGE@
-originsdir = $(pkgconfdir)/origins
-
-dist_origins_DATA = debian
-
-
-install-data-local:
-	$(mkdir_p) $(DESTDIR)$(pkgdatadir)/origins
