@@ -1,3 +1,0 @@
-Vendor: Debian
-Vendor-URL: http://www.debian.org/
-Bugs: debbugs://bugs.debian.org
