@@ -33,6 +33,7 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     - Add gpgv to Recommends. Useful to check signatures of extracted packages.
     - Add debian-maintainers to Suggests. Together with debian-keyring they
     contain all the GPG keys required to verify official Debian packages.
+  * Drop /etc/dpkg/origins as it's taken over by base-files (see #487437).
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
